--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "vue-router": "^3.1.6",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vuex": "^3.1.3"
   },
   "eslintConfig": {
     "root": true,
